--- a/package.json
+++ b/package.json
@@ -5,24 +5,31 @@
   "scripts": {
     "start": "webpack serve --env mode=development port=2121",
     "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "build:dev": "webpack --env mode=development",
+    "build:mobile": "webpack --env mode=development --env platform=mobile",
+    "build:desktop": "webpack --env mode=development --env platform=desktop"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "@types/webpack": "^5.28.5",
     "@types/webpack-bundle-analyzer": "^4.7.0",
-    "@types/webpack-dev-server": "^4.7.1",
+    "@types/webpack-dev-server": "^4.7.2",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.3",
     "mini-css-extract-plugin": "^2.9.2",
-    "sass": "^1.82.0",
+    "react-refresh": "^0.14.2",
+    "react-refresh-typescript": "^2.0.9",
+    "sass": "^1.83.0",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
